# onset-detect

./: .gitignore  README.md  blstm.py  create_dataset.py  datasets.py  extract_data.py  extract_features.py  file_reading.py  hyperparameters.py  model.py  onset_detect.py  pyproject.toml  requirements.txt  train.py  training.py
baseline/: convolutional_onsets.ipynb  ninos2.ipynb  onsets.npy
dataset/: __init__.py  dataset.py
evaluation/: model_eval.py  time_elapsed.py
extraction/: __init__.py  extract_data.py  extract_features.py
file_reading/: file_reading.py  folder_iterator.py
model/: evaluation.py  hyperparameters.py  model.py  train.py
model/trained_models/: f_0.09823531107979425.pt  f_0.10110744058900913.pt  f_0.10218043845799708.pt  f_0.10378805875051324.pt  f_0.10639680622045611.pt  f_0.10923692656285192.pt  f_0.1163528618101079.pt  f_0.12509223441666806.pt  f_0.13303186715466744.pt  f_0.13530083179342378.pt  f_0.15632677350984886.pt  f_0.18801775684929503.pt  f_0.32888217078902743.pt  f_0.345187646554834.pt  f_0.43715937949478595.pt  f_0.4750161531373607.pt  f_0.5245676577669902.pt
onset_detect/: onset_detect.py
onset_detect/dataset/: dataset.py
onset_detect/evaluation/: model_eval.py  time_elapsed.py
onset_detect/extraction/: extract_data.py  extract_features.py
onset_detect/file_reading/: file_reading.py  folder_iterator.py
onset_detect/model/: hyperparameters.py  model.py  train.py
test/: test_dataset.py  test_evaluation.py  test_feature_extraction.py  test_onset_detection.py  test_training.py
(+1 files in other folders)
